# ChangeLog for dev-util/idea
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +ChangeLog:
  adding ChangeLog to shut repoman up
