@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> idea-6.0.6.ebuild,
+  idea-7.0.1.ebuild, idea-7.0.2.ebuild, idea-7.0.3.ebuild,
+  idea-7.0.4.ebuild, idea-8.0_pre1.ebuild:
+  fixing IUSE repoman warnings
+
   14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +ChangeLog:
   adding ChangeLog to shut repoman up
 
